# geomatics_thesis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  file_process.py  laz_process.py
code/pointcloud_process/: CMakeLists.txt  read_ply_header.py
code/pointcloud_process/include/: ply_process.h
code/pointcloud_process/src/: ply_process.cpp
code/test/: CMakeLists.txt
code/test/include/: custom_ply.h
code/test/src/: custom_ply.cpp  main.cpp
include/: custom_ply.h  custom_point.h  ransac.h  ransac_2d.h
resources/: 2024_C_44HZ1_14_clip.ply  2024_C_44HZ1_14_line.ply  2024_C_44HZ1_14_line_End.ply  2024_C_44HZ1_14_pylon.ply  line_wnnc_l0.ply  line_wnnc_l1.ply  pylon458.ply  pylon_wnnc_l0.ply  pylon_wnnc_l1.ply
resources/dalles/: ins_265.ply  ins_384.ply  ins_416.ply  ins_436.ply  ins_478.ply  ins_485.ply  ins_612.ply  ins_738.ply  ins_764.ply  ins_853.ply  ins_901.ply  ins_945.ply
src/: custom_ply.cpp  custom_point.cpp  main.cpp  ransac.cpp  temp.py
